test/expected/explain_lv.out
explain long void x
             ^
14: error: "long void" is illegal for built-in type
